fix currency align
fix currency align

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1215,3 +1215,6 @@ input:focus, .focus{
 	visibility: hidden;
 }
 /*fim - receivable e expense*/
+.input-text-align-right {
+	text-align: right;
+}
